<resources>
    <string name="app_name" translatable="false">OPTC SmartDB</string>
    <string name="backbutton" translatable="false">Back button</string>
    <string name="big_char_image" translatable="false">Large image of the character</string>
    <string name="reset_filters" translatable="false">Reset all filters</string>
    <string name="small_char_image" translatable="false">Small character picture</string>
    <string name="reset_database" translatable="false">Redownload database</string>
    <string name="filterBtn_contDesc" translatable="false">Search button pic</string>
    <string name="resetBtn_contDesc" translatable="false">Reset button pic</string>
    <string name="sort_contDesc" translatable="false">Sort button pic</string>
    <string name="pref_name" translatable="false">optc_smart_db_setting</string>
    <string name="tutorial_displayed" translatable="false">displayed_nnteams</string>
    <string name="tutorial_drawer" translatable="false">displayed_newsettings_indrawer</string>
    <string name="lastupdate" translatable="false">date_last_update</string>
    <string name="theme_pref" translatable="false">theme_preference</string>
    <string name="rebuild_db" translatable="false">db_to_rebuild_5_3</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="pref_failedupdate" translatable="false">preference_update_failed</string>
    <string name="download_db" translatable="false">download_database_pref</string>
    <string name="check_update" translatable="false">check_updates_pref</string>
    <string name="pref_language" translatable="false">preference_language</string>
    <string name="pref_update_app" translatable="false">preferences_update_app</string>
    <string name="pref_daynight_theme" translatable="false">preference_daynight_theme</string>
    <string name="pref_overlay" translatable="false">preference_overlay_button</string>
    <string name="pref_donation" translatable="false">preference_donate</string>
    <string name="prefs_noticeboard_viewed" translatable="false">noticeboard_viewed_set</string>
    <string name="pref_notification" translatable="false">preference_notification_shortcut</string>
    <string name="prefClearThumbCacheKey" translatable="false">preference_clear_thumbnail_cache</string>
    <string name="prefShowNNIntegration" translatable="false">preference_show_nn_integration</string>
    <string name="class1">Class 1</string>
    <string name="class2">Class 2</string>
    <string name="type">Type</string>
    <string name="stars">Stars</string>
    <string name="cost">Cost</string>
    <string name="combo">Combo</string>
    <string name="slots">Slots</string>
    <string name="maxlevel">Max Level</string>
    <string name="exptomax">Max Exp</string>
    <string name="level">Level</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="rcv">RCV</string>
    <string name="lvl1">1</string>
    <string name="lvlmax">MAX</string>
    <string name="captability">Captain Ability</string>
    <string name="specability">Special:</string>
    <string name="speccooldown">Cooldowns (max/min):</string>
    <string name="filter_hint">Search by name or ID</string>
    <string name="update_msg">An update is out! Do you want to install it? (v%1$s)</string>
    <string name="update_btn">Sure</string>
    <string name="loadingmsg">Please wait while loading data…</string>
    <string name="loading_characters">Updating characters list</string>
    <string name="downloading_cooldowns">Downloading cooldowns</string>
    <string name="loading_cooldowns">Updating cooldowns</string>
    <string name="downloading_abilities">Downloading abilities</string>
    <string name="loading_abilities">Updating abilities</string>
    <string name="downloading_evolutions">Downloading evolutions</string>
    <string name="loading_evolutions">Updating evolutions</string>
    <string name="evolutions">Character evolutions:</string>
    <string name="notes_text">"Notes: "</string>
    <string name="tab_maininfo">Main Info</string>
    <string name="tab_abilities">Abilities</string>
    <string name="tab_evolutions">Evolutions</string>
    <string name="reset_db_title">Database reset</string>
    <string name="reset_db_message">Are you sure you want to reset and download again the DB?</string>
    <string name="reset_db_cancel">No</string>
    <string name="reset_db_confirm">Yes</string>
    <string name="enable_unknown_sources_first">To install this app you need to enable unknown sources from your device settings first!</string>
    <string name="enable_unknown_sources_btn">OK</string>
    <string name="type_title">Type</string>
    <string-array name="type_array">
        <item>STR</item>
        <item>DEX</item>
        <item>QCK</item>
        <item>PSY</item>
        <item>INT</item>
    </string-array>
    <string name="class_title">Class</string>
    <string-array name="class_array">
        <item>Fighter</item>
        <item>Striker</item>
        <item>Slasher</item>
        <item>Shooter</item>
        <item>Free Spirit</item>
        <item>Cerebral</item>
        <item>Powerhouse</item>
        <item>Driven</item>
        <item>Booster</item>
        <item>Evolver</item>
    </string-array>
    <string name="stars_title">Stars</string>
    <string-array name="stars_array">
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
    <string name="capt_flags_title">Captain ability</string>
    <string-array name="capt_flags_array">
        <item>Type-boosting captains</item>
        <item>Class-boosting captains</item>
        <item>ATK boosting captains</item>
        <item>HP boosting captains</item>
        <item>RCV boosting captains</item>
        <item>Special boosting captains</item>
        <item>2x ATK and HP captains</item>
        <item>2x ATK and RCV captains</item>
        <item>2.5x ATK captains</item>
        <item>2.75x ATK captains</item>
        <item>3x ATK captains</item>
        <item>HP-based ATK captains</item>
        <item>Positional captains</item>
        <item>\"Beneficial\" Orb captains</item>
        <item>Chain multipliers</item>
        <item>Combo Boost Captains</item>
        <item>Cooldown reducers</item>
        <item>Damage reducers</item>
        <item>Healers</item>
        <item>Tankers</item>
        <item>Zombies</item>
        <item>End of Turn Damage Dealer</item>
        <item>Beli Boosters</item>
        <item>EXP Boosters</item>
        <item>Drop Doublers</item>
    </string-array>
    <string name="spec_flags_title">Special ability</string>
    <string-array name="spec_flags_array">
        <item>Type-boosting specials</item>
        <item>Class-boosting specials</item>
        <item>1.5x ATK specials</item>
        <item>1.75x ATK specials</item>
        <item>2x ATK specials</item>
        <item>Conditional ATK boosters</item>
        <item>Delayed ATK boosters</item>
        <item>Color Affinity boosters</item>
        <item>Combo Boost Specials</item>
        <item>RCV boosters</item>
        <item>Orb lockers</item>
        <item>Orb boosters</item>
        <item>Orb chance boosters</item>
        <item>Orb controllers</item>
        <item>Full-board orb controllers</item>
        <item>Self-orb controllers</item>
        <item>Orb randomizers</item>
        <item>Orb switchers</item>
        <item>Orb matchers</item>
        <item>Slot emptiers</item>
        <item>Slot fillers</item>
        <item>Delayers</item>
        <item>Single-target damage dealer</item>
        <item>Multi-target damage dealers</item>
        <item>Multi-hit damage dealers</item>
        <item>Fixed damage dealers</item>
        <item>Health cutters</item>
        <item>HP-based damage dealers</item>
        <item>Defense reducers</item>
        <item>Meat producers</item>
        <item>Meat converters</item>
        <item>Damage reducers</item>
        <item>Damage nullifiers</item>
        <item>Bind reducers</item>
        <item>Despair reducers</item>
        <item>Silence reducers</item>
        <item>Block orb removers</item>
        <item>Blindness removers</item>
        <item>Healers</item>
        <item>Health reducers</item>
        <item>Poisoners</item>
        <item>Poison removers</item>
        <item>Zombies</item>
        <item>Special cooldown reducer</item>
        <item>Paralysis reducers</item>
        <item>Chain Boosters</item>
        <item>Chain Lockers</item>
        <item>\"Beneficial\" Orb Enablers</item>
    </string-array>
    <string name="prefs_cat_appsettings">App Settings</string>
        <string name="prefs_update_db">Update database</string>
        <string name="prefs_update_db_desc">Automatically update database</string>
        <string name="prefs_check_updates">Check for updates</string>
        <string name="prefs_check_updates_desc">Notify user when app update is available</string>
    <string name="prefs_localization_cat">Localization</string>
        <string name="prefs_localization">Language</string>
    <string name="prefs_extra_cat">Extra</string>
        <string name="prefs_download_update">Download update</string>
    <string name="prefs_daynight_theme">Day / Night Theme</string>
    <string name="prefs_overlay">Show floating app icon</string>
    <string name="prefs_overlay_desc">Show floating button when app is not open</string>
    <string name="pref_donation_cat">Support the app!</string>
    <string name="prefs_donation">Donate to support development</string>
    <string name="prefs_donation_desc">Next goal will be publishing app to Play Store</string>
    <string name="feedback_nodonation">I don\'t want to donate</string>
    <string name="feedback_donatemessage">Hey, thank you for using this app! \n If you find it useful why don\'t you consider donating a small sum to support development? With your donations I\'ll be able to publish this app to Play Store!</string>
    <string name="feedback_moreinfo">Read more...</string>
    <string name="feedback_viewdonations">View donations</string>
    <string name="feedback_viewfeedbacks">View feedbacks</string>
    <string name="feedback_donatemessage_extended" >I\'m really proud of this app, and I\'m surely happy when I see it helps so many people.\nHowever time spent to program and improve it is time I take away from something else, and even though I\'m a big OPTC player and I myself use the app, I\'m also a student, so I need time to attain my degree and to earn money to live.\nWhile I can surely keep improving the app as I did so far, donations help me in being more relaxed and in gaining more time for the app development. \nDonations are also needed to pay for services like Play Store. I think Play Store is an important upgrade this app needs since some people may have trouble installing it and some people may have concerns regarding its safety, issues that would be solved with the app released on Play Store.\n\nThat said, thank you all for using this app, I\'m really happy it helps!</string>
    <string name="dialogNNTeamsTitle">Teams with this character as a captain</string>
    <string name="dialogNNTeamsPoweredBy"><b>Powered by <u>Nakama.network</u></b></string>
    <string name="nnteamsSearchQuestHint">Search quest</string>
</resources>