<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:layout_weight="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="18sp"
        android:text="@string/feedback_donatemessage_extended"/>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_viewdonations"
            android:textSize="16dp"
            android:id="@+id/feedback_view_donations"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_viewfeedbacks"
            android:textSize="16dp"
            android:id="@+id/feedback_view_feedbacks"
            android:layout_toRightOf="@id/feedback_view_donations"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_unknown_sources_btn"
            android:textSize="22dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:id="@+id/feedback_ok"/>
    </RelativeLayout>

</LinearLayout>