<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/feedback_donatemessage"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/feedback_moreinfo"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/feedback_moreinfo"
        android:textColor="#0d47a1"
        />
    <ImageButton
        android:background="@mipmap/ic_donate_paypal"
        android:scaleType="fitCenter"
        android:layout_width="138dp"
        android:layout_height="39dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/feedback_donate"
        android:layout_marginTop="20dp"
        />
    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#bdbdbd" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:text="@string/feedback_nodonation"
        android:id="@+id/feedback_nodonation"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
</LinearLayout>